# multi-rate-DAG

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  eval_jitter.m  evaluate.m  reactionTimeDist.m
app/: main.cpp
include/multi-rate-DAG/DAG/: MaxProduct.h
include/multi-rate-DAG/Evaluation/: Scheduling.h  SchedulingInfo.h
include/multi-rate-DAG/MultiRate/: DummyNodes.h  MultiNode.h
include/multi-rate-DAG/VariableTaskSet/: VariableMultiEdge.h  VariableMultiNode.h
src/: CMakeLists.txt  MultiRate.cpp  MultiRate.h  dag.cpp  dag.h  main.cpp  main.tex  structures.cpp  structures.h
src/Benchmark/: Becker.cpp  Becker.h  Benchmark.cpp  Benchmark.h  DPT.hpp  DataFiles.cpp  DataFiles.h
src/DAG/: DAG.cpp  DAG.h  Edge.cpp  Edge.h  IntervalPropagation.h  MaxProduct.cpp  MaxProduct.h  Node.cpp  Node.h  PlainDAG.cpp  PlainDAG.h
src/Evaluation/: Evaluation.cpp  Evaluation.h  LatencyInfo.h  Scheduling.cpp  Scheduling.h  SchedulingInfo.h
src/MultiRate/: DummyNodes.cpp  DummyNodes.h  HeterogeneousInfo.h  MultiEdge.cpp  MultiEdge.h  MultiNode.cpp  MultiNode.h  MultiRateTaskset.cpp  MultiRateTaskset.h
src/Simulation/: ChainSim.cpp  ChainSim.h  CoreManager.cpp  CoreManager.h  DAGScheduler.cpp  DAGScheduler.h  JitterCount.cpp  JitterCount.h  Simulate.cpp  Task.cpp  Task.h  TaskSet.cpp  TaskSet.h  TaskSetHandler.h
src/VariableTaskSet/: PlainTaskSet.h  VariableMultiEdge.cpp  VariableMultiEdge.h  VariableTaskSet.cpp  VariableTaskSet.h
src/samples/: SharedResource.hpp
